--- a/static/styles.css
+++ b/static/styles.css
@@ -7,9 +7,9 @@
 
 /* CSS Variables */
 :root {
-    --primary: #667eea;
-    --primary-dark: #5a67d8;
-    --secondary: #764ba2;
+    --primary: #9333ea;
+    --primary-dark: #7e22ce;
+    --secondary: #6d28d9;
     --success: #48bb78;
     --error: #f56565;
     --text-primary: #2d3748;
